# OPCUASim

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/opcuaegui-shared/: Cargo.toml
crates/opcuaegui-shared/src/: fonts.rs  lib.rs  runtime.rs  settings.rs  theme.rs  widgets.rs
crates/opcuamaster-app/: Cargo.toml  tauri.conf.json
crates/opcuamaster-app/icons/: icon.icns
crates/opcuamaster-app/pki/own/: cert.der
crates/opcuamaster-app/pki/private/: private.pem
crates/opcuamaster-app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/opcuamaster-egui/: Cargo.toml
crates/opcuamaster-egui/src/: app.rs  events.rs  lib.rs  main.rs  model.rs  runtime.rs
crates/opcuamaster-egui/src/backend/: dispatcher.rs  mod.rs  state.rs
crates/opcuamaster-egui/src/panels/: browse_panel.rs  connection_tree.rs  data_table.rs  history_tab.rs  log_panel.rs  mod.rs  toolbar.rs  value_panel.rs
crates/opcuamaster-egui/src/widgets/: cert_manager_dialog.rs  connection_dialog.rs  method_call_dialog.rs  mod.rs
crates/opcuamaster-egui/tests/: e2e.rs
crates/opcuaserver-app/: Cargo.toml  tauri.conf.json
crates/opcuaserver-app/capabilities/: default.json
crates/opcuaserver-app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/opcuaserver-egui/: Cargo.toml
crates/opcuaserver-egui/src/: app.rs  events.rs  main.rs  model.rs  runtime.rs
crates/opcuaserver-egui/src/backend/: dispatcher.rs  state.rs
crates/opcuaserver-egui/src/panels/: address_tree.rs  mod.rs  node_table.rs  property_editor.rs  status_bar.rs  toolbar.rs
crates/opcuasim-core/: Cargo.toml
crates/opcuasim-core/src/: browse.rs  cert_manager.rs  client.rs  config.rs  discovery.rs  error.rs  history.rs  lib.rs  log_collector.rs  log_entry.rs  method.rs  node.rs  output.rs  polling.rs  reconnect.rs  subscription.rs
crates/opcuasim-core/src/server/: address_space.rs  generator.rs  mod.rs  models.rs  server.rs  simulation.rs  test_methods.rs
crates/opcuasim-core/tests/: cert_manager.rs  discovery.rs
crates/opcuasim-core/tests/fixtures/: test_cert.der
docs/manual-tests/: history-read.md
docs/superpowers/plans/: 2026-04-07-opcua-master.md  2026-04-28-deadband-filter.md  2026-04-28-endpoint-discovery.md  2026-04-28-history-read.md  2026-04-28-method-call.md  2026-04-28-trust-list-manager.md
docs/superpowers/specs/: 2026-04-07-opcua-master-design.md  2026-04-08-opcua-server-design.md  2026-04-27-tier1-uaexpert-parity-design.md
master-frontend/: index.html  package.json  vite.config.ts
master-frontend/src/: App.vue  types.ts
master-frontend/src/components/: BrowsePanel.vue  ConnectionDialog.vue  ConnectionTree.vue  DataTable.vue  LogPanel.vue  Toolbar.vue  ValuePanel.vue
master-frontend/src/composables/: useDialog.ts
server-frontend/: index.html  package.json  vite.config.ts
server-frontend/src/: App.vue  types.ts
server-frontend/src/components/: AddressSpaceTree.vue  NodeTable.vue  PropertyEditor.vue  StatusBar.vue  Toolbar.vue
shared-frontend/: package.json  tsconfig.json
shared-frontend/src/: index.ts
shared-frontend/src/components/: AppDialog.vue
shared-frontend/src/composables/: useDialog.ts  useErrorHandler.ts  useLogFilter.ts  useLogPanel.ts
shared-frontend/src/types/: common.ts
