[workspace]
members = [
    "crates/opcuasim-core",
    "crates/opcuaegui-shared",
    "crates/opcuamaster-egui",
    "crates/opcuaserver-egui",
]
resolver = "2"

[workspace.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["all_loaders"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
rfd = "0.17"
csv = "1.3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
