[package]
name = "opcuamaster-app"
version = "0.1.0"
description = "OPCUAMaster - Cross-platform OPC UA Master Station"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opcuamaster_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
opcuasim-core = { path = "../opcuasim-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
