[package]
name = "opcuaserver-app"
version = "0.1.0"
description = "OPCUAServer - Cross-platform OPC UA Simulation Server"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opcuaserver_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
opcuasim-core = { path = "../opcuasim-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
